[package]
name = "bm25_calc"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
missing_docs_in_private_items = "warn"
nursery = "warn"

[dependencies]
bm25 = "2.2.0"
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8.5"
indicatif = "0.17"
regex = "1.10.2"
clap = { version = "4.5", features = ["derive"] }
plotters = "0.3"
image = "0.24"
imageproc = "0.23"
rusttype = "0.9"
tabled = "0.18"
serde = { version = "1.0.217", features = ["derive"] }